style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  color: #222;
  line-height: 1.4;
  font-size: 16px;
  font-family: Helvetica, sans-serif;
}

header {
  width: 100vw;
  text-transform: uppercase;
  justify-content: space-between;
  align-items: center;
  background-color: #292727;
  padding: 0px 2rem;
  display: flex;
}


nav a{
  color: #FFFFFF;
  padding: 1.2rem;
  text-decoration: none;
  font-size: 1.5rem;
  font-weight: bold;
}

nav ul {
  list-style: none;
  display: flex;
  gap: 1rem;
}

nav li {
  list-style: none;
}

a:hover{
  color:#3DB2FF;
  text-decoration: underline;
}

.banner-logo{
width: 300px;
height: auto;
padding: 1rem;
}


.tagline{
  background-image: linear-gradient(rgb(120 13 13 / 75%), rgb(13 13 95 / 85%)),url("https://static.vecteezy.com/system/resources/previews/049/946/430/non_2x/race-checker-flag-background-chess-horisontal-border-vector.jpg");
  color: white;
  font-size: 4.5rem;
  text-align: center;
  margin-bottom: 0;
  margin-top: 0;
  width: 100vw;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.splash-art{
width: 100vw;
height: 100%;
}

h2{
margin: 2.5rem auto;
max-width: 1000px;
text-align: center; 
color: #686A6A;
padding-bottom: 1.2rem;
border-bottom: 4px solid #FA3E3E;
font-size: 2rem;
font-weight: 700;
}

.quote-name{
  margin-top: 0.5rem;
 font-size: 1.3rem;
}


.main-page-content{
padding: 4.5rem;
background-color: #292727;
width: 100vw;
}

h3{
font-size: 2.5rem;
color: white;
text-align: center;
padding-bottom: 1.5rem;
}

.paragraph-table-one,
.paragraph-table-two{
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
  margin-bottom: 2rem;
}

.paragraph-table-one{
  background-color: #FA3E3E;
  border-radius: 2rem;
}

.paragraph-table-two{
 background-color: #6ABBDE;
 border-radius: 2rem;
}

.game-screenshot-one,
.game-screenshot-two{
max-width: 100%;
height: auto;
padding: 1.5rem;
border-radius: 2rem;
}
  
.game-description-one,
.game-description-two{
color: white;
font-size: 1.2rem;
padding: 2rem;
height: auto;
margin: 1rem;
}


@media only screen and (max-width: 480px) {

  header {
flex-direction: column;
align-items: center;
padding: 0.8rem;
}

  nav a{
    font-size: 1rem;
  }

  .tagline{
  font-size: 2.5rem;
  text-align: center;
}

h2{
margin: 1.5rem auto;
max-width: 450px;
text-align: center; 
color: #686A6A;
padding-bottom: 1.2rem;
border-bottom: 4px solid #FA3E3E;
font-weight: bold;
font-size: 1.5rem;
}

.paragraph-table-one,
.paragraph-table-two{
  display: grid;
  grid-template-columns: 1fr;
  align-items: center;
  margin-bottom: 2rem;
}

.game-description-one,
.game-description-two{
color: white;
font-size: 1.2rem;
padding: 1rem;
height: auto;
margin: 1rem;
}

.main-page-content{
padding: 1.5rem;
}

